@@ -4,6 +4,7 @@ Version Next
     - Made sync(1) work on s3backer file to flush cached data (issue #197)
     - Fix bug where s3b_compress=deflate NDB flag would fail (issue #195)
     - Reuse cURL handles after normal HTTP error codes (issue #199)
+    - Run modprobe(8) if needed when starting with the --nbd flag (issue #203)
 
 Version 2.0.2 released July 17, 2022
 
